tests/expectations/compiler/constructor/custom_constructor_too_many_set_remove_fail.out
Error [ECMP0376015]: This block contains 33 `set`/`remove` mapping commands, but the maximum allowed is 32.
    --> compiler-test:6:5
     |
   6 |     @custom
     |     ^^^^^^^
   7 |     constructor() {
     |     ^^^^^^^^^^^^^^^
   8 |         foo.set(0u8, 0u8);
     |         ^^^^^^^^^^^^^^^^^^
   9 |         foo.set(1u8, 1u8);
     |         ^^^^^^^^^^^^^^^^^^
  10 |         foo.set(2u8, 2u8);
     |         ^^^^^^^^^^^^^^^^^^
  11 |         foo.set(3u8, 3u8);
     |         ^^^^^^^^^^^^^^^^^^
  12 |         foo.set(4u8, 4u8);
     |         ^^^^^^^^^^^^^^^^^^
  13 |         foo.set(5u8, 5u8);
     |         ^^^^^^^^^^^^^^^^^^
  14 |         foo.set(6u8, 6u8);
     |         ^^^^^^^^^^^^^^^^^^
  15 |         foo.set(7u8, 7u8);
     |         ^^^^^^^^^^^^^^^^^^
  16 |         foo.set(8u8, 8u8);
     |         ^^^^^^^^^^^^^^^^^^
  17 |         foo.set(9u8, 9u8);
     |         ^^^^^^^^^^^^^^^^^^
  18 |         foo.set(10u8, 10u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  19 |         foo.set(11u8, 11u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  20 |         foo.set(12u8, 12u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  21 |         foo.set(13u8, 13u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  22 |         foo.set(14u8, 14u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  23 |         foo.set(15u8, 15u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  24 |         foo.set(16u8, 16u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  25 |         foo.set(17u8, 17u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  26 |         foo.set(18u8, 18u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  27 |         foo.set(19u8, 19u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  28 |         foo.set(20u8, 20u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  29 |         foo.set(21u8, 21u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  30 |         foo.set(22u8, 22u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  31 |         foo.set(23u8, 23u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  32 |         foo.set(24u8, 24u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  33 |         foo.set(25u8, 25u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  34 |         foo.set(26u8, 26u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  35 |         foo.set(27u8, 27u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  36 |         foo.set(28u8, 28u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  37 |         foo.set(29u8, 29u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  38 |         foo.set(30u8, 30u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  39 |         foo.set(31u8, 31u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  40 |         foo.set(32u8, 32u8);
     |         ^^^^^^^^^^^^^^^^^^^^
  41 |     }
     |     ^
